Componentizando entidades
