# src/entities/user.ts
@@ -1,13 +1,14 @@
-export class User {
-    id!: number;
-    name!: string;
-    email!: string;
-    password!: string;
-    profile_picture_url!: string;
-    created_at!: Date;
-  
-    constructor(user?: Partial<User>) {
-      Object.assign(this, user);
-    }
+import { BaseEntity, IEntity } from "./entity.base";
+
+export interface IUser extends IEntity {
+  name: string;
+  email: string;
+  password: string;
+  profile_picture_url?: string;
+}
+
+export class User extends BaseEntity<IUser> {
+  constructor(user: IUser) {
+    super(user); // Chama a classe base para realizar as validações
   }
-  
+}
