# src/swagger-output.json
@@ -38,6 +38,49 @@
         }
       }
     },
+    "/users/register": {
+      "post": {
+        "tags": [
+          "User"
+        ],
+        "description": "Endpoint to register a user.",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "email": {
+                  "example": "any"
+                },
+                "password": {
+                  "example": "any"
+                },
+                "name": {
+                  "example": "any"
+                },
+                "profile_picture_url": {
+                  "example": "any"
+                }
+              }
+            },
+            "description": "Dados do usuário."
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
     "/questions/": {
       "get": {
         "tags": [
